# pockit

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_core.txt
.github/: FUNDING.yml
pockit/: __init__.py
pockit/base/: __init__.py  autoupdate.py  discretizationbase.py  easyderiv.py  fastfunc.py  phasebase.py  systembase.py  variablebase.py  vectypes.py
pockit/lobatto/: __init__.py  discretization.py  phase.py  system.py  variable.py
pockit/optimizer/: __init__.py  _common.py  ipopt.py  scipy.py
pockit/radau/: __init__.py  discretization.py  phase.py  system.py  variable.py
tests/test_base/: test_discretization_base.py  test_easyderiv.py  test_fastfunc.py  test_variable_base.py
tests/test_labatto/: test_bound_lobatto.py  test_check_lobatto.py  test_derivative_lobatto.py  test_discretization_lobatto.py
tests/test_optimizer/: test_optimizer_scipy.py
tests/test_radau/: test_bound_radau.py  test_check_radau.py  test_derivative_radau.py  test_discretization_radau.py
